--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "presets": ["react", "es2015"]
+  "presets": ["react", "es2015"],
+
+  "env": {
+    "development": {
+      "plugins": ["rewire"]
+    }
+  }
 }
