--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "steep-water",
+  "name": "empty-brook",
   "version": "1.0.0",
   "description": "My app description",
   "scripts": {
     "build": "webpack --display-error-details",
     "postinstall": "npm run build",
     "serve": "nodemon server.js --ignore app/components",
-        "start": "node server.js",
+    "start": "node server.js",
     "test": "npm run test:client && npm run test:server",
     "test:client": "mocha test/client --recursive --compilers js:babel-register",
     "test:server": "mocha test/server --recursive --compilers js:babel-register"
   },
   "dependencies": {
-    "async": "^1.5.2",
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.1",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.1",
@@ -27,13 +25,10 @@
     "express": "^4.13.4",
     "express-validator": "^2.20.4",
     "jade": "^1.11.0",
-    "jsonwebtoken": "^5.7.0",
-    "moment": "^2.12.0",
-    "mongoose": "^4.4.8",
     "morgan": "^1.7.0",
+    "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
     "react": "15.1.0",
-    "react-cookie": "^0.4.5",
     "react-dom": "15.1.0",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
@@ -44,7 +39,6 @@
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.0.1",
-    "request": "^2.69.0",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0",
