--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
     "cookie-parser": "^1.4.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "express-partials": "^0.3.0",
+    "express-session": "^1.11.3",
+    "express-urlrewrite": "^1.2.0",
     "express-validator": "^2.20.4",
     "jade": "^1.11.0",
+    "method-override": "^2.3.5",
     "morgan": "^1.7.0",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
+    "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
     "react": "15.1.0",
     "react-dom": "15.1.0",
     "react-redux": "4.4.1",
@@ -39,6 +45,7 @@
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.0.1",
+    "router": "^1.1.3",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0",
