--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "webpack --display-error-details",
     "postinstall": "npm run build",
-    "serve": "nodemon server.js --ignore app/components",
+    "serve": "nodemon server.js",
     "start": "node server.js",
     "test": "npm run test:client && npm run test:server",
     "test:client": "mocha test/client --recursive --compilers js:babel-register",
@@ -29,6 +29,7 @@
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
     "react": "15.1.0",
+    "react-bootstrap": "^0.30.5",
     "react-dom": "15.1.0",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
