--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "nodemailer": "^2.3.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
-    "react": "15.1.0",
+    "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-dom": "15.1.0",
     "react-redux": "4.4.1",
