--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^5.7.0",
     "method-override": "^2.3.5",
     "moment": "^2.12.0",
+    "mongoose": "4.6.6",
     "morgan": "^1.7.0",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
