--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.1",
     "compression": "^1.6.2",
     "connect-mongodb-session": "^1.3.0",
+    "connect-pg-simple": "^3.1.2",
     "cookie-parser": "^1.4.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^5.7.0",
     "method-override": "^2.3.5",
     "moment": "^2.12.0",
+    "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
