--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "npm run build",
     "serve": "nodemon server.js",
     "start": "node server.js",
+    "offline": "node offlineserver.js",
     "test": "npm run test:client && npm run test:server",
     "test:client": "mocha test/client --recursive --compilers js:babel-register",
     "test:server": "mocha test/server --recursive --compilers js:babel-register"
