--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "body-parser": "^1.15.1",
     "compression": "^1.6.2",
     "connect-mongodb-session": "^1.3.0",
-    "connect-pg-simple": "^3.1.2",
+    "connect-session-knex": "^1.3.0",
     "cookie-parser": "^1.4.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
@@ -32,6 +32,7 @@
     "express-validator": "^2.20.4",
     "jade": "^1.11.0",
     "jsonwebtoken": "^5.7.0",
+    "knex": "^0.12.6",
     "method-override": "^2.3.5",
     "moment": "^2.12.0",
     "mongoose": "4.6.6",
@@ -41,8 +42,7 @@
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
-    "pg":"6.1.0",
-    "pg-simple":"0.2.2",
+    "pg": "6.1.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-cookie": "^0.4.5",
