--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "webpack --display-error-details",
     "postinstall": "npm run build",
     "serve": "nodemon server.js",
-    "start": "node server.js",
-    "offline": "node offlineserver.js",
+    "start": " webpack --display-error-details && node server.js",
+    "offline": "wbprack --display-error-details && node offlineserver.js",
     "test": "npm run test:client && npm run test:server",
     "test:client": "mocha test/client --recursive --compilers js:babel-register",
     "test:server": "mocha test/server --recursive --compilers js:babel-register"
