--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nodemailer": "^2.3.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
     "passport-github2": "^0.1.10",
     "pg": "6.1.0",
     "react": "^15.3.2",
