--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "build": "webpack --display-error-details",
     "postinstall": "npm run build",
-    "serve": " webpack --display-error-details && node server.js",
-    "start": " webpack --display-error-details && node server.js",
+    "serve": " webpack --display-error-details && nodemon server.js --ignore app",
+    "start": " webpack --display-error-details && nodemon server.js --ignore app",
     "offline": "node offlineserver.js",
     "test": "npm run test:client && npm run test:server",
     "test:client": "mocha test/client --recursive --compilers js:babel-register",
