--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "body-parser": "^1.15.1",
+    "bookshelf": "^0.10.2",
     "compression": "^1.6.2",
     "connect-mongodb-session": "^1.3.0",
     "connect-session-knex": "^1.3.0",
