--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "passport-github": "^1.1.0",
     "passport-github2": "^0.1.10",
     "pg": "6.1.0",
-    "react": "^15.3.2",
+    "react": "^15.4.2",
     "react-bootstrap": "^0.30.5",
     "react-cookie": "^0.4.5",
-    "react-dom": "15.1.0",
+    "react-dom": "^15.4.2",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
     "react-transform-catch-errors": "^1.0.2",
