--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-urlrewrite": "^1.2.0",
     "express-validator": "^2.20.4",
     "jade": "^1.11.0",
+    "json-loader": "^0.5.4",
     "jsonwebtoken": "^5.7.0",
     "knex": "^0.12.6",
     "method-override": "^2.3.5",
@@ -49,6 +50,7 @@
     "react-bootstrap": "^0.30.5",
     "react-cookie": "^0.4.5",
     "react-dom": "^15.4.2",
+    "react-markdown": "^2.5.0",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
     "react-transform-catch-errors": "^1.0.2",
