--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-react": "^6.5.0",
     "body-parser": "^1.15.1",
     "bookshelf": "^0.10.2",
+    "chai": "^3.5.0",
     "compression": "^1.6.2",
     "connect-mongodb-session": "^1.3.0",
     "connect-session-knex": "^1.3.0",
@@ -48,6 +49,7 @@
     "pg": "6.1.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.5",
+    "react-codemirror": "^0.3.0",
     "react-cookie": "^0.4.5",
     "react-dom": "^15.4.2",
     "react-markdown": "^2.5.0",
