--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-markdown": "^2.5.0",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
+    "react-skylight": "^0.4.1",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.4",
