--- a/package.json
+++ b/package.json
@@ -76,12 +76,13 @@
     "enzyme": "^2.3.0",
     "fetch-mock": "3.0.2",
     "mocha": "^2.4.5",
+    "nodemon": "1.11.0",
     "react-addons-test-utils": "^15.0.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-mock-store": "^1.0.2",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
-    "supertest": "^1.2.0",
-    "nodemon": "1.11.0"
+    "supertest": "^1.2.0"
   },
   "engines": {
     "node": "6.1.0"
