--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
     "react-skylight": "^0.4.1",
+    "react-sticky": "^6.0.1",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.4",
