--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-react": "^6.5.0",
     "body-parser": "^1.15.1",
     "bookshelf": "^0.10.2",
+    "bootstrap": "^3.3.7",
     "chai": "^3.5.0",
     "compression": "^1.6.2",
     "connect-mongodb-session": "^1.3.0",
@@ -47,11 +48,13 @@
     "passport-github": "^1.1.0",
     "passport-github2": "^0.1.10",
     "pg": "6.1.0",
-    "react": "^15.4.2",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
     "react-bootstrap": "^0.30.5",
+    "react-bootstrap-slider": "^2.0.0",
     "react-codemirror": "^0.3.0",
     "react-cookie": "^0.4.5",
-    "react-dom": "^15.4.2",
+    "react-dom": "^15.5.4",
     "react-markdown": "^2.5.0",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
