removed live preview

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.11.3",
     "express-urlrewrite": "^1.2.0",
     "express-validator": "^2.20.4",
+    "gitter-sidecar": "^1.2.3",
     "jade": "^1.11.0",
     "json-loader": "^0.5.4",
     "jsonwebtoken": "^5.7.0",
@@ -52,7 +53,7 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.5",
     "react-bootstrap-slider": "^2.0.0",
-    "react-codemirror": "^0.3.0",
+    "react-codemirror": "^1.0.0",
     "react-cookie": "^0.4.5",
     "react-dom": "^15.5.4",
     "react-markdown": "^2.5.0",
