--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gitter-sidecar": "^1.2.3",
     "jade": "^1.11.0",
     "json-loader": "^0.5.4",
+    "json-query": "^2.2.2",
     "jsonwebtoken": "^5.7.0",
     "knex": "^0.12.6",
     "method-override": "^2.3.5",
@@ -59,6 +60,7 @@
     "react-markdown": "^2.5.0",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
+    "react-scrollable-anchor": "^0.4.2",
     "react-skylight": "^0.4.1",
     "react-sticky": "^6.0.1",
     "react-transform-catch-errors": "^1.0.2",
