--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.4",
+    "reduce-reducers": "^0.1.2",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.3",
