add Files to ignore of SmokeTests

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ Thumbs.db
 /public/js/bundle.js
 
 /vendor/
+test/codeception/_output/*
+test/codeception/_support/_generated/
+package-lock.json
+composer.lock
