--- a/test/codeception/acceptance.suite.yml
+++ b/test/codeception/acceptance.suite.yml
@@ -12,7 +12,7 @@ modules:
   config:
     WebDriver:
       window_size: 1024x768
-      url: 'http://typo3.org'
+      url: 'http://127.0.0.1:3000/'
       browser: 'chrome'
 extensions:
   enabled:
