ignore generated Files of SmokeTest

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ Thumbs.db
 # webpacker build files
 /public/js/bundle.js
 
+# SmokeTest generated Files
 /vendor/
 test/codeception/_output/*
 test/codeception/_support/_generated/
