--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "empty-brook",
+  "name": "Code Connect",
   "version": "1.0.0",
   "description": "My app description",
   "scripts": {
