--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Code Connect",
+  "name": "Code-Connect",
   "version": "1.0.0",
   "description": "Learn Programming by Working on Mentored Real World Projects",
   "scripts": {
