ignore SCSS compilation files

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ test/codeception/_output/*
 test/codeception/_support/_generated/
 package-lock.json
 composer.lock
+
+# SCSS compilation files
+*.css.map
