add mssql to package.json

--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "jsonwebtoken": "^5.7.0",
     "knex": "^0.12.6",
     "method-override": "^2.3.5",
-    "moment": "^2.12.0",
+    "moment": "^2.19.2",
     "mongoose": "4.6.6",
     "morgan": "^1.7.0",
+    "mssql": "<4.0.0",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
     "nodemon": "^1.11.0",
@@ -58,7 +59,7 @@
     "react-codemirror": "^1.0.0",
     "react-cookie": "^0.4.5",
     "react-dom": "^15.5.4",
-    "react-markdown": "^2.5.0",
+    "react-markdown": "^2.5.1",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
     "react-scrollable-anchor": "^0.4.2",
