--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "jsonwebtoken": "^5.7.0",
     "knex": "^0.12.6",
     "method-override": "^2.3.5",
-    "moment": "^2.19.2",
+    "moment": "^2.19.3",
     "mongoose": "4.6.6",
     "morgan": "^1.7.0",
-    "mssql": "<4.0.0",
+    "mssql": "^3.3.0",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
     "nodemon": "^1.11.0",
@@ -76,8 +76,8 @@
     "redux-thunk": "^2.0.1",
     "router": "^1.1.3",
     "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.21.0",
     "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
