--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "express-urlrewrite": "^1.2.0",
     "express-validator": "^2.20.4",
     "gitter-sidecar": "^1.2.3",
-    "marked": "^0.3.12",
     "jade": "^1.11.0",
     "json-loader": "^0.5.7",
     "json-query": "^2.2.2",
     "jsonwebtoken": "^5.7.0",
     "knex": "^0.12.6",
+    "marked": "^0.3.12",
+    "material-ui": "^0.20.0",
     "method-override": "^2.3.5",
     "moment": "^2.20.1",
     "mongoose": "4.6.6",
