--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-sticky": "^6.0.1",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
+    "recharts": "^1.0.0-beta.10",
     "redbox-react": "^1.5.0",
     "reduce-reducers": "^0.1.2",
     "redux": "^3.7.2",
